--- a/index.html
+++ b/index.html
@@ -245,9 +245,6 @@
         </div>
     </footer>
 
-    <script>
-        // Smooth scrolling for navigation links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const target = document.querySelector(this.getAt
+    <script src="script.js"></script>
+</body>
+</html>
