--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motion Aura - Premium Video Editing</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
     <!-- Navigation -->
@@ -98,7 +100,7 @@
                 </button>
                 <button class="portfolio-tab" data-category="web-development">
                     <span class="tab-icon">💻</span>
-                    <span class="tab-text">Web Development</span>
+                    <span class="tab-text">Web Designing</span>
                 </button>
                 <button class="portfolio-tab" data-category="graphic-design">
                     <span class="tab-icon">🎨</span>
@@ -376,18 +378,26 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-links">
-                <a href="#home">Home</a>
-                <a href="#services">Services</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-            </div>
-            <p>&copy; 2025 Motion Aura. All rights reserved. | Crafting cinematic experiences that inspire.</p>
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-links">
+            <a href="#home">Home</a>
+            <a href="#services">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            <a href="https://www.instagram.com/moti.onaura2/" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-instagram"></i> Instagram
+</a>
+<a href="https://www.facebook.com/profile.php?id=61578626347235" target="_blank" rel="noopener noreferrer">
+    <i class="fab fa-facebook"></i> Facebook
+</a>
+
         </div>
-    </footer>
+        <p>&copy; 2025 Motion Aura. All rights reserved. | Crafting cinematic experiences that inspire.</p>
+    </div>
+</footer>
+
 
     <script src="script.js"></script>
 </body>
