--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
 <a href="https://www.facebook.com/profile.php?id=61578626347235" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-facebook"></i> Facebook
 </a>
-<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+<a href="https://www.linkedin.com/company/motionaura-digital-agency/" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-linkedin-in"></i> LinkedIn
 </a>
-<a href="https://www.threads.net/" target="_blank" rel="noopener noreferrer">
+<a href="https://www.threads.com/@motion.aura2?hl=en" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-instagram"></i> Threads
 </a>
 
