--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <div class="footer-content">
         <div class="footer-links">
             
-            <a href="https://www.instagram.com/motion.aura2" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.instagram.com/motion.aura2/" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-instagram"></i> Instagram
 </a>
 <a href="https://www.facebook.com/profile.php?id=61578626347235" target="_blank" rel="noopener noreferrer">
